--- a/shiwake/templates/shiwake/result.html
+++ b/shiwake/templates/shiwake/result.html
@@ -3,6 +3,9 @@
 	<title>結果</title>
 </head>
 <body>
-	<div>成功</div>
+	<div>データを追加しました</div>
+	<div>
+		<a href="http://muucomet.pythonanywhere.com">更に追加する</a>
+	</div>
 </body>
 </html>
