--- a/shiwake/templates/shiwake/shiwakeform.html
+++ b/shiwake/templates/shiwake/shiwakeform.html
@@ -3,7 +3,7 @@
 	<title>フォーム</title>
 </head>
 <body>
-<form action="" method="post">
+<form action="" method="POST">
 {% csrf_token %}
 	<table>
 		{{form1.as_table}}
